--- a/src/Xamarin.Forms.Dynamic.WP8/packages.config
+++ b/src/Xamarin.Forms.Dynamic.WP8/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="wpa81" />
-  <package id="Xamarin.Forms.Master" version="1.2.2.8690" targetFramework="wpa81" />
+  <package id="GitInfo" version="1.0.47-pre" targetFramework="wpa81" />
+  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="wpa81" />
+  <package id="Xamarin.Forms" version="1.5.0.6447" targetFramework="wpa81" />
 </packages>
