--- a/src/Xamarin.Forms.Dynamic.Android/packages.config
+++ b/src/Xamarin.Forms.Dynamic.Android/packages.config
@@ -1,7 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="GitInfo" version="1.0.47-pre" targetFramework="monoandroid403" />
-  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="monoandroid403" />
-  <package id="Xamarin.Android.Support.v4" version="21.0.3.0" targetFramework="monoandroid45" />
-  <package id="Xamarin.Forms" version="1.4.4.6392" targetFramework="monoandroid403" />
+  <package id="GitInfo" version="1.1.12" targetFramework="monoandroid403" />
+  <package id="Newtonsoft.Json" version="8.0.3" targetFramework="monoandroid403" />
+  <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="23.3.0" targetFramework="monoandroid60" />
+  <package id="Xamarin.Android.Support.Design" version="23.3.0" targetFramework="monoandroid60" />
+  <package id="Xamarin.Android.Support.v4" version="23.3.0" targetFramework="monoandroid60" />
+  <package id="Xamarin.Android.Support.v7.AppCompat" version="23.3.0" targetFramework="monoandroid60" />
+  <package id="Xamarin.Android.Support.v7.CardView" version="23.3.0" targetFramework="monoandroid60" />
+  <package id="Xamarin.Android.Support.v7.MediaRouter" version="23.3.0" targetFramework="monoandroid60" />
+  <package id="Xamarin.Android.Support.v7.RecyclerView" version="23.3.0" targetFramework="monoandroid60" />
+  <package id="Xamarin.Android.Support.Vector.Drawable" version="23.3.0" targetFramework="monoandroid60" />
+  <package id="Xamarin.Forms" version="2.2.0.31" targetFramework="monoandroid60" />
 </packages>
