--- a/src/Xamarin.Forms.Dynamic.nuspec
+++ b/src/Xamarin.Forms.Dynamic.nuspec
@@ -18,20 +18,20 @@
 	</metadata>
 	<files>
 		<!--PCL-->
-		<file src="Xamarin.Forms.Dynamic\bin\$Configuration$\Xamarin.Forms.Dynamic.dll" target="lib\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10" />
-		<file src="Xamarin.Forms.Dynamic\bin\$Configuration$\Xamarin.Forms.Dynamic.xml" target="lib\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10" />
+		<file src="Xamarin.Forms.Dynamic\bin\Debug\Xamarin.Forms.Dynamic.dll" target="lib\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10" />
+		<file src="Xamarin.Forms.Dynamic\bin\Debug\Xamarin.Forms.Dynamic.xml" target="lib\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10" />
 
 		<!--Android-->
-		<file src="Xamarin.Forms.Dynamic.Android\bin\$Configuration$\Xamarin.Forms.Dynamic.dll" target="lib\MonoAndroid10" />
-		<file src="Xamarin.Forms.Dynamic.Android\bin\$Configuration$\Xamarin.Forms.Dynamic.xml" target="lib\MonoAndroid10" />
+		<file src="Xamarin.Forms.Dynamic.Android\bin\Debug\Xamarin.Forms.Dynamic.dll" target="lib\MonoAndroid10" />
+		<file src="Xamarin.Forms.Dynamic.Android\bin\Debug\Xamarin.Forms.Dynamic.xml" target="lib\MonoAndroid10" />
 
 		<!--iPhone Unified-->
-		<file src="Xamarin.Forms.Dynamic.iOS\bin\$Configuration$\Xamarin.Forms.Dynamic.dll" target="lib\Xamarin.iOS10" />
-		<file src="Xamarin.Forms.Dynamic.iOS\bin\$Configuration$\Xamarin.Forms.Dynamic.xml" target="lib\Xamarin.iOS10" />
+		<file src="Xamarin.Forms.Dynamic.iOS\bin\Debug\Xamarin.Forms.Dynamic.dll" target="lib\Xamarin.iOS10" />
+		<file src="Xamarin.Forms.Dynamic.iOS\bin\Debug\Xamarin.Forms.Dynamic.xml" target="lib\Xamarin.iOS10" />
 
 		<!--iPhone Classic-->
-		<file src="Xamarin.Forms.Dynamic.iOS.Classic\bin\$Configuration$\Xamarin.Forms.Dynamic.dll" target="lib\MonoTouch10" />
-		<file src="Xamarin.Forms.Dynamic.iOS.Classic\bin\$Configuration$\Xamarin.Forms.Dynamic.xml" target="lib\MonoTouch10" />
+		<file src="Xamarin.Forms.Dynamic.iOS.Classic\bin\Debug\Xamarin.Forms.Dynamic.dll" target="lib\MonoTouch10" />
+		<file src="Xamarin.Forms.Dynamic.iOS.Classic\bin\Debug\Xamarin.Forms.Dynamic.xml" target="lib\MonoTouch10" />
 
 		<!--Disable these for now
 		<!- -Windows Phone 8- ->
