--- a/src/Xamarin.Forms.Dynamic/packages.config
+++ b/src/Xamarin.Forms.Dynamic/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="GitInfo" version="1.0.47-pre" targetFramework="portable45-net45+win8+wp8" />
-  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="portable45-net45+win8+wp8" />
-  <package id="Xamarin.Forms" version="1.4.4.6392" targetFramework="portable45-net45+win8+wp8" />
+  <package id="GitInfo" version="1.1.12" targetFramework="portable45-net45+win8+wp8" />
+  <package id="Newtonsoft.Json" version="8.0.3" targetFramework="portable45-net45+win8+wp8" />
+  <package id="Xamarin.Forms" version="2.2.0.31" targetFramework="portable45-net45+win8+wp8" />
 </packages>
