json model update

--- a/src/Xamarin.Forms.Dynamic.nuspec
+++ b/src/Xamarin.Forms.Dynamic.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
     <metadata>
         <id>Xamarin.Forms.Dynamic</id>
-        <version>0.1.1</version>
+        <version>0.1.2</version>
         <authors>Daniel Cazzulino</authors>
         <owners>Daniel Cazzulino</owners>
         <licenseUrl>http://www.mobileessentials.org/license</licenseUrl>
@@ -17,13 +17,13 @@
         </dependencies>
     </metadata>
     <files>
-        <file src="Xamarin.Forms.Dynamic.Android\bin\Debug\Xamarin.Forms.Dynamic.dll" target="lib\MonoAndroid10\Xamarin.Forms.Dynamic.dll" />
-        <file src="Xamarin.Forms.Dynamic.Android\bin\Debug\Xamarin.Forms.Dynamic.xml" target="lib\MonoAndroid10\Xamarin.Forms.Dynamic.xml" />
-        <file src="Xamarin.Forms.Dynamic.iOS.Classic\bin\Debug\Xamarin.Forms.Dynamic.dll" target="lib\MonoTouch10\Xamarin.Forms.Dynamic.dll" />
-        <file src="Xamarin.Forms.Dynamic.iOS.Classic\bin\Debug\Xamarin.Forms.Dynamic.xml" target="lib\MonoTouch10\Xamarin.Forms.Dynamic.xml" />
-        <file src="Xamarin.Forms.Dynamic\bin\Debug\Xamarin.Forms.Dynamic.dll" target="lib\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.Dynamic.dll" />
-        <file src="Xamarin.Forms.Dynamic\bin\Debug\Xamarin.Forms.Dynamic.xml" target="lib\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.Dynamic.xml" />
-        <file src="Xamarin.Forms.Dynamic.iOS\bin\Debug\Xamarin.Forms.Dynamic.dll" target="lib\Xamarin.iOS10\Xamarin.Forms.Dynamic.dll" />
-        <file src="Xamarin.Forms.Dynamic.iOS\bin\Debug\Xamarin.Forms.Dynamic.xml" target="lib\Xamarin.iOS10\Xamarin.Forms.Dynamic.xml" />
+        <file src="Xamarin.Forms.Dynamic.Android\bin\Release\Xamarin.Forms.Dynamic.dll" target="lib\MonoAndroid10\Xamarin.Forms.Dynamic.dll" />
+        <file src="Xamarin.Forms.Dynamic.Android\bin\Release\Xamarin.Forms.Dynamic.xml" target="lib\MonoAndroid10\Xamarin.Forms.Dynamic.xml" />
+        <file src="Xamarin.Forms.Dynamic.iOS.Classic\bin\Release\Xamarin.Forms.Dynamic.dll" target="lib\MonoTouch10\Xamarin.Forms.Dynamic.dll" />
+        <file src="Xamarin.Forms.Dynamic.iOS.Classic\bin\Release\Xamarin.Forms.Dynamic.xml" target="lib\MonoTouch10\Xamarin.Forms.Dynamic.xml" />
+        <file src="Xamarin.Forms.Dynamic\bin\Release\Xamarin.Forms.Dynamic.dll" target="lib\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.Dynamic.dll" />
+        <file src="Xamarin.Forms.Dynamic\bin\Release\Xamarin.Forms.Dynamic.xml" target="lib\portable-win+net45+wp80+win81+wpa81+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.Dynamic.xml" />
+        <file src="Xamarin.Forms.Dynamic.iOS\bin\Release\Xamarin.Forms.Dynamic.dll" target="lib\Xamarin.iOS10\Xamarin.Forms.Dynamic.dll" />
+        <file src="Xamarin.Forms.Dynamic.iOS\bin\Release\Xamarin.Forms.Dynamic.xml" target="lib\Xamarin.iOS10\Xamarin.Forms.Dynamic.xml" />
     </files>
 </package>
